Users falta put e delete, auths feito, tenho de acabar os testes de ambos

--- a/auths/.env.dev
+++ b/auths/.env.dev
@@ -1,3 +1,10 @@
-PRIVATE_KEY = projeto_to_do_list_microservices
+PRIVATE_KEY=projeto_to_do_list_microservices
 
-NODE_PORT = 3001
+NODE_ENV=dev
+HOST=127.0.0.1
+PROSTGRES_PORT=9003
+PROSTGRES_USER=user
+PROSTGRES_PASS=12345
+PROSTGRES_DB=todo_list_users
+
+NODE_PORT=3001
