--- a/users/package.json
+++ b/users/package.json
@@ -7,7 +7,12 @@
     "start": "NODE_ENV=prod node src/server.js",
     "dev": "set NODE_ENV=dev&& nodemon src/server.js",
     "knex:migrate": "SET NODE_ENV=dev&& knex migrate:latest --env dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --runInBand --forceExit",
+    "lint": "eslint src/** test/** --fix",
+    "secure-mode": "SET NODE_ENV=test&& jest --watchAll",
+    "mac:knex:migrate": "export NODE_ENV=test && knex migrate:latest --env test",
+    "win:start:test": "SET NODE_ENV=test&&nodemon ./src/server.js",
+    "mac:start:test": "export NODE_ENV=test && nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +24,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jwt-simple": "^0.5.6",
     "knex": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
