--- a/auths/package.json
+++ b/auths/package.json
@@ -22,6 +22,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.3",
     "consign": "^0.1.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
